[FIXING #58][WIP] IFrame only displays the results & code refatoring

--- a/bob-js-client/src/main/webapp/generate-snippet.html
+++ b/bob-js-client/src/main/webapp/generate-snippet.html
@@ -18,21 +18,19 @@
         <script src="js/layout.js"></script>
         <script src="js/bootstrap-select.js"></script>
         <script src="js/ZeroClipboard.min.js"></script>
-    	<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
     </head>
     <body>
         <div id="menu"></div>
         <div class="container">  
             <div class="row row-centered">
                 <div id="banner"></div>
-       				<div class="col-xs-6 col-centered wide-container">		
-    					<label for="beacon" style="margin:0 auto;display:block;"class="control-label">&nbsp Select beacons to generate code snippet for:</label>
-    					<div class="col-xs-9" style="margin:10px"id="beaconlist"></div>
-    				
-    					<div class="col-xs-9 col-centered row-centered" style="margin: 0 auto;display: block;">
-    						<button data-toggle="modal" data-target="#code-modal" id="generate_snippet_btn" class="btn btn-primary full">Generate Snippet</button>
-    					</div>
-				</div>	
+				<div class="col-xs-6 col-xs-offset-2 col-centered wide-container" style="margin-top: 2%">
+					<label for="beacon" class="control-label">&nbsp; Select beacons to generate code snippet for:</label>
+					<div class="col-xs-9" style="margin: 10px auto;" id="beaconlist"></div>
+					<div class="col-xs-9" style="margin: 0 auto;display: block;">
+						<button data-toggle="modal" data-target="#code-modal" id="generate_snippet_btn" class="btn btn-primary full">Generate Snippet</button>
+					</div>
+				</div>
         	</div>
         </div>	
         
