--- a/bob-js-client/src/main/webapp/menu.html
+++ b/bob-js-client/src/main/webapp/menu.html
@@ -2,11 +2,11 @@
     <ul class="nav navbar-nav">
         <li><a href="index.html">Query</a></li>
         <li><a href="map.html">Beacon map</a></li>
-        <li><a href="subscribe.html">Register beacon</a></li>
-        <li><a href="generate-snippet.html" target="_blank">Generate snippet</a></li>
+        <li><a href="subscribe.html">Beacon registation</a></li>
+        <li><a href="generate-snippet.html">Widget</a></li>
         <li><a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a></li>
         <li><a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a></li>
         <li><a href="mailto:beacon@dnastack.com?subject=Beacon of Beacons Feedback">Feedback</a></li>
-        <li><a href="http://youtu.be/sNQzAmfi7xI" target="_blank">What's a beacon?</a></li>
+        <li><a href="http://youtu.be/sNQzAmfi7xI" target="_blank">About</a></li>
     </ul>
 </div>
