embedding youtube video in the client

--- a/bob-js-client/src/main/webapp/menu.html
+++ b/bob-js-client/src/main/webapp/menu.html
@@ -7,6 +7,6 @@
         <li><a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a></li>
         <li><a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a></li>
         <li><a href="mailto:beacon@dnastack.com?subject=Beacon of Beacons Feedback">Feedback</a></li>
-        <li><a href="http://youtu.be/sNQzAmfi7xI" target="_blank">About</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 </div>
