--- a/bob-js-client/src/main/webapp/menu.html
+++ b/bob-js-client/src/main/webapp/menu.html
@@ -2,7 +2,7 @@
     <ul class="nav navbar-nav">
         <li><a href="index.html">Query</a></li>
         <li><a href="map.html">Beacon map</a></li>
-        <li><a href="subscribe.html">Beacon registation</a></li>
+        <li><a href="subscribe.html">Beacon registration</a></li>
         <li><a href="generate-snippet.html">Widget</a></li>
         <li><a href="http://mcupak.github.io/beacon-of-beacons" target="_blank">Documentation</a></li>
         <li><a href="https://github.com/mcupak/beacon-of-beacons" target="_blank">Source code</a></li>
