--- a/api.html
+++ b/api.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon of Beacons</title>
+        <title>Beacon Network</title>
     </head>
 
     <body>
@@ -38,7 +38,7 @@
                 <h2>
                     <a id="api" class="anchor" href="#api" aria-hidden="true"><span class="octicon octicon-link"></span></a>API</h2>
 
-                <p>BoB was designed with ease of programmatic access in mind. It provides XML, JSON and plaintext responses to accommodate needs of all the clients across all the programming languages. The API to use is determined using the header supplied by the client in its GET request, e.g.:</p>
+                <p>Beacon Network was designed with ease of programmatic access in mind. It provides XML, JSON and plaintext responses to accommodate needs of all the clients across all the programming languages. The API to use is determined using the header supplied by the client in its GET request, e.g.:</p>
 
                 <pre><code>Accept: application/json
 </code></pre>
@@ -58,7 +58,7 @@
                     <li>{reference}: Genome ID. Optional parameter. Unless it is specified, all the genomes supported by the specific beacons are queried.</li>
                 </ul>
 
-                <p>Bob currently supports over 18 publicly available beacons and converts the input information into the queries they can understand. This may include a change of chromosome identifier, using a 0-based position instead of a 1-based one as well as using a different allele representation. Some beacons support multiple projects or tracks, in which case BoB queries all of them and look for a positive response from almost one of them.</p>
+                <p>Bob currently supports over 18 publicly available beacons and converts the input information into the queries they can understand. This may include a change of chromosome identifier, using a 0-based position instead of a 1-based one as well as using a different allele representation. Some beacons support multiple projects or tracks, in which case Beacon Network queries all of them and look for a positive response from almost one of them.</p>
                 
                 <p>To see more queries, go to the <a href="queries.html">queries page</a>.</p>
             </section>
