--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer class="inner">
-    <p class="copyright">Beacon of Beacons is maintained by <a href="http://dnastack.com/">DNAstack</a>.</p>
+    <p class="copyright">Beacon Network is maintained by <a href="http://dnastack.com/">DNAstack</a>.</p>
 </footer>
