--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header class="inner">
     <a id="forkme_banner" href="https://github.com/mcupak/beacon-of-beacons">View on GitHub</a>
 
-    <h1 id="project_title">Beacon of Beacons</h1>
+    <h1 id="project_title">Beacon Network</h1>
     <h2 id="project_tagline"></h2>
 
     <section id="downloads">
