--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon of Beacons</title>
+        <title>Beacon Network</title>
     </head>
 
     <body>
@@ -36,9 +36,9 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is BoB?</h2>
+                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Beacon Network?</h2>
 
-                <p>Beacon of Beacons project (BoB) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. BoB standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
+                <p>The GA4GH Beacon Network (formerly known as the Beacon of Beacons, or Beacon Network for short) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. Beacon Network standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
                 
                 <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="http://youtu.be/sNQzAmfi7xI">this YouTube video</a>.</p>
             </section>
