--- a/running.html
+++ b/running.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon of Beacons</title>
+        <title>Beacon Network</title>
     </head>
 
     <body>
@@ -36,30 +36,9 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="system-requirements" class="anchor" href="#system-requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>System requirements</h2>
-
-                <p>All you need to build this project is Java 7.0 (Java SDK 1.7) or later, Maven 3.0 or later. Since the project is Java EE based and utilizes some of the advanced features of Java EE 6, an application server with support for Java EE 6 Full profile is needed to deploy the application (e.g. JBoss EAP or WildFly).</p>
-
-                <h2>
                     <a id="how-to-run-it" class="anchor" href="#how-to-run-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run it</h2>
 
-                <p>Start the JBoss server:</p>
-
-                <pre><code>For Linux:   JBOSS_HOME/bin/standalone.sh
-For Windows: JBOSS_HOME\bin\standalone.bat
-</code></pre>
-
-                <p>Build and deploy the archive:</p>
-
-                <pre><code>mvn clean install jboss-as:deploy
-</code></pre>
-
-                <p>The application should now be running on <a href="http://localhost:8080/beacon-of-beacons">http://localhost:8080/beacon-of-beacons</a>.</p>
-
-                <h2>
-                    <a id="technologies" class="anchor" href="#technologies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technologies</h2>
-
-                <p>Java EE. CDI, EJB, JAX-RS, JAXB, Bean Validation. Tested with Arquillian/ShrinkWrap.</p>
+                <p>Instructions maintained in <a href="https://github.com/mcupak/beacon-of-beacons">README.md</a> on GitHub.</p>
             </section>
         </div>
 
