--- a/visit.html
+++ b/visit.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon of Beacons</title>
+        <title>Beacon Network</title>
     </head>
 
     <body>
@@ -36,14 +36,12 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="see-bob-in-action" class="anchor" href="#see-bob-in-action" aria-hidden="true"><span class="octicon octicon-link"></span></a>See BoB in action</h2>
+                    <a id="see-bob-in-action" class="anchor" href="#see-bob-in-action" aria-hidden="true"><span class="octicon octicon-link"></span></a>See Beacon Network in action</h2>
 
-                <p>If you want to BoB, check out some of the following links:</p>
+                <p>If you want to Beacon Network, check out some of the following links:</p>
                 <ul>
-                    <li>Primary BoB client provided by DNAstack: <a href="http://beacon.dnastack.com/">http://beacon.dnastack.com/</a></li>
-                    <li>Mirror of BoB on the GA4GH website: <a href="http://ga4gh.org/#/beacon/bob">http://ga4gh.org/#/beacon/bob</a></li>
-                    <li>BRCA version of BoB: <a href="http://dnastack.com/ga4gh/bob/brca.html">http://dnastack.com/ga4gh/bob/brca.html</a></li>
-                    <li>REST API provided by DNAstack: <a href="http://beacon-dnastack.rhcloud.com/">http://beacon-dnastack.rhcloud.com/</a></li>
+                    <li>Primary Beacon Network client provided by DNAstack: <a href="http://beacon-network.org/">http://beacon-network.org/</a></li>
+                    <li>REST API provided by DNAstack: <a href="http://dnastack.com/bob-api/">http://dnastack.com/bob-api/</a></li>
                 </ul>
 
             </section>
