--- a/beacons.html
+++ b/beacons.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon of Beacons</title>
+        <title>Beacon Network</title>
     </head>
 
     <body>
@@ -38,124 +38,12 @@
                 <h2>
                     <a id="api" class="anchor" href="#api" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build beacons</h2>
 
-                <p>Building beacons on top of your data is simple. To help you get started, we created a set of beacon development kits (BDKs), or adapters if you will, for popular languages:</p>
+                <p>Building beacons on top of your data is simple. To help you get started, we created a set of beacon development kits (BDKs), or adapters if you will, for popular languages. For more information, go to:</p>
                 <ul>
-                    <li><a href="#java">Java BDK</a></li>
-                    <li><a href="#nodejs">Node.js BDK</a></li>
-                    <li><a href="#python">Python BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-java">Java BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-nodejs">Node.js BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-python">Python BDK</a></li>
                 </ul>
-
-                <h3><a id="java" class="anchor" href="#java" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java BDK</h3>
-                <ul>
-                    <li><a href="#java-what-it-is">What it is</a></li>
-                    <li><a href="#java-system-requirements">System requirements</a></li>
-                    <li><a href="#java-how-to-run-it">How to run it</a></li>
-                    <li><a href="#java-how-it-works">How it works</a></li>
-                    <li><a href="#java-source">Source code</a></li>
-                    <li><a href="#java-technologies">Technologies</a></li>
-                </ul>
-                <h4 id="java-what-it-is">What it is</h4>
-                <p>This project contains BDK (beacon development kit) for Java (EE) developers. It provides a skeleton of a simple beacon allowing the developers to plug in their own data/functionality. The API makes sure the response produced is compatible with what the Beacon of Beacons can consume.</p>
-                <h4 id="java-system-requirements">System requirements</h4>
-                <p>All you need to build this project is Java 7.0 (Java SDK 1.7) or later, Maven 3.0 or later. Since the project is Java EE based, an application server with support for Java EE 6 is needed to deploy the application (e.g. JBoss EAP or WildFly).</p>
-                <h4 id="how-to-run-it">How to run it</h4>
-                <p>Start the JBoss server:</p>
-                <pre><code>For Linux:   JBOSS_HOME/bin/standalone.sh
-For Windows: JBOSS_HOME\bin\standalone.bat
-</code></pre><p>Build and deploy the archive:</p>
-                <pre><code>mvn clean install jboss-as:deploy
-</code></pre><p>The application should now be running on <a href="http://localhost:8080/beacon-java">http://localhost:8080/beacon-java</a>.</p>
-                <p>In order to run the tests in a managed (remote) container, use the test-managed (test-remote) Maven profile. Example:</p>
-                <pre><code>mvn clean test -Ptest-managed
-</code></pre><h4 id="java-how-it-works">How it works</h4>
-                <p>The project provides the following:</p>
-                <ul>
-                    <li>API for beacons</li>
-                    <li>sample beacon implementation</li>
-                    <li>conversion of parameters to a normalized form (the same way Beacon of Beacons does)</li>
-                    <li>sample navigation webpage</li>
-                    <li>sample testsuite</li>
-                </ul>
-                <p>In order to create your own beacon, we suggest you do the following:</p>
-                <ul>
-                    <li>implement BeaconService interface (replace the sample implementation provided in the SampleBeaconService class, you shouldn&#39;t need to touch any other classes in this project)</li>
-                    <li>modify index.jsp to provide a landing page for your beacon (optional)</li>
-                    <li>provide query with a YES and NO response in BeaconResourceTest class to make sure your beacon works (optional)</li>
-                </ul>
-                <p>The API takes care of the rest and provides the following endpoints upon deployment of your beacon:</p>
-                <pre><code>http://localhost:8080/beacon-java/rest/info - information about your beacon
-http://localhost:8080/beacon-java/rest/query - access to query service
-</code></pre>
-                <h4 id="java-source">Source code</h4>
-                <p>Available at <a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-java">https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-java</a>.</p>
-                <h4 id="java-technologies">Technologies</h4>
-                <p>Java EE. CDI, JAX-RS, JAXB. Tested with Arquillian/ShrinkWrap.</p>
-
-
-                <h3><a id="nodejs" class="anchor" href="#nodejs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Node.js BDK</h3>
-                <ul>
-                    <li><a href="#nodejs-what-it-is">What it is</a></li>
-                    <li><a href="#nodejs-system-requirements">System requirements</a></li>
-                    <li><a href="#nodejs-how-to-run-it">How to run it</a></li>
-                    <li><a href="#nodejs-how-it-works">How it works</a></li>
-                    <li><a href="#nodejs-source">Source code</a></li>
-                    <li><a href="#nodejs-technologies">Technologies</a></li>
-                </ul>
-                <h4 id="nodejs-what-it-is">What it is</h4>
-                <p>This project contains BDK (beacon development kit) for Node.js developers. It provides a skeleton of a simple beacon allowing the developers to plug in their own data/functionality. The API makes sure the response produced is compatible with what the Beacon of Beacons can consume.</p>
-                <h4 id="nodejs-system-requirements">System requirements</h4>
-                <p>All you need to build this project restify, which you can install via npm:</p>
-                <pre><code>$ npm install restify
-</code></pre><h4 id="nodejs-how-to-run-it">How to run it</h4>
-                <p>Launch beacon.js:</p>
-                <pre><code>$ node beacon.js
-</code></pre><p>This starts an embedded server. By default, the application will be available at <a href="http://localhost:8080">http://localhost:8080</a></p>
-                <h4 id="nodejs-how-it-works">How it works</h4>
-                <p>In order to implement a beacon, simply override beacon details and query function in beacon.js (marked with TODO in the source code).</p>
-                <p>The API takes care of the rest and provides the following endpoints when you start your beacon:</p>
-                <pre><code>http://localhost:8080/beacon-nodejs/rest/info - information about your beacon
-http://localhost:8080/beacon-nodejs/rest/query - access to query service
-</code></pre><p>Query example:</p>
-                <pre><code>GET http://localhost:8080/beacon-nodejs/rest/query?chrom=15&amp;pos=41087870&amp;allele=A&amp;ref=hg19
-</code></pre>
-                <h4 id="nodejs-source">Source code</h4>
-                <p>Available at <a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-nodejs">https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-nodejs</a>.</p>
-                <h4 id="nodejs-technologies">Technologies</h4>
-                <p>Node.js, Restify.</p>
-
-                <h3><a id="python" class="anchor" href="#java" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python BDK</h3>
-                <ul>
-                    <li><a href="#python-what-it-is">What it is</a></li>
-                    <li><a href="#python-system-requirements">System requirements</a></li>
-                    <li><a href="#python-how-to-run-it">How to run it</a></li>
-                    <li><a href="#python-how-it-works">How it works</a></li>
-                    <li><a href="#python-source">Source code</a></li>
-                    <li><a href="#python-technologies">Technologies</a></li>
-                </ul>
-                <h4 id="python-what-it-is">What it is</h4>
-                <p>This project contains BDK (beacon development kit) for Python developers. It provides a skeleton of a simple beacon allowing the developers to plug in their own data/functionality. The API makes sure the response produced is compatible with what the Beacon of Beacons can consume.</p>
-                <h4 id="python-system-requirements">System requirements</h4>
-                <p>All you need to build this project is Python and Flask web framework. If you&#39;re running Linux, OS X or Windows with cygwin support, the following commands should be enough to set up Flask (the process is a bit different with the native version of Python on Windows):</p>
-                <pre><code>$ cd todo-api
-$ virtualenv flask
-$ flask/bin/pip install flask
-</code></pre><h4 id="python-how-to-run-it">How to run it</h4>
-                <p>Launch beacon.py:</p>
-                <pre><code>$ chmod a+x beacon.py
-$ ./beacon.py
-</code></pre><p>This starts an embedded server. By default, the application will be available at <a href="http://127.0.0.1:5000">http://127.0.0.1:5000</a>.</p>
-                <h4 id="python-how-it-works">How it works</h4>
-                <p>In order to implement a beacon, simply override beacon details and query function in beacon.py (marked with TODO in the source code).</p>
-                <p>The API takes care of the rest and provides the following endpoints when you start your beacon:</p>
-                <pre><code>http://127.0.0.1:5000/beacon-python/rest/info - information about your beacon
-http://127.0.0.1:5000/beacon-python/rest/query - access to query service
-</code></pre><p>Query example:</p>
-                <pre><code>GET http://127.0.0.1:5000/beacon-python/rest/query?chrom=15&amp;pos=41087870&amp;allele=A&amp;ref=hg19
-</code></pre>
-                <h4 id="python-source">Source code</h4>
-                <p>Available at <a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-python">https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-python</a>.</p>
-                <h4 id="python-technologies">Technologies</h4>
-                <p>Python, Flask.</p>
             </section>
         </div>
 
