added terms of use

--- a/menu.html
+++ b/menu.html
@@ -7,5 +7,6 @@
     <li><a href='queries.html'><span>Query examples</span></a></li>
     <li><a href='beacons.html'><span>Build beacons</span></a></li>
     <li><a href='contribute.html'><span>Contribute</span></a></li>
+    <li><a href='terms.html'><span>License & Terms of use</span></a></li>
     <li class='last'><a href='contact.html'><span>Contact us</span></a></li>
 </ul>
