--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>
                     <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Beacon Network?</h2>
 
-                <p>The GA4GH Beacon Network (formerly known as the Beacon of Beacons, or Beacon Network for short) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. Beacon Network standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
+                <p>Beacon Network (formerly known as Beacon of Beacons, or BoB, for short) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. Beacon Network standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
                 
                 <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="http://youtu.be/sNQzAmfi7xI">this YouTube video</a>.</p>
             </section>
