--- a/beacons.html
+++ b/beacons.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -40,9 +40,9 @@
 
                 <p>Building beacons on top of your data is simple. To help you get started, we created a set of beacon development kits (BDKs), or adapters if you will, for popular languages. For more information, go to:</p>
                 <ul>
-                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-java">Java BDK</a></li>
-                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-nodejs">Node.js BDK</a></li>
-                    <li><a href="https://github.com/mcupak/beacon-of-beacons/tree/master/beacon-adapters/beacon-python">Python BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-java">Java BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-nodejs">Node.js BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-python">Python BDK</a></li>
                 </ul>
             </section>
         </div>
