--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -38,8 +38,8 @@
                 <h2>
                     <a id="see-bob-in-action" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact us</h2>
 
-                <h4>Do you have a question about Beacon Network?</h4>
-                <p><a href="mailto:beacon@dnastack.com?subject=[Beacon Network] Question&body=Hi, I have a question regarding the Beacon Network:">Send us an email</a>.</p>
+                <h4>Do you have a question about Beacon of Beacons?</h4>
+                <p><a href="mailto:beacon@dnastack.com?subject=[Beacon of Beacons] Question&body=Hi, I have a question regarding the Beacon of Beacons:">Send us an email</a>.</p>
                 <h4>Have you found a bug?</h4>
                 <p>Make sure <a href="https://github.com/mcupak/beacon-of-beacons/issues">we don't have an issue filed for the same problem</a>. If not, <a href="https://github.com/mcupak/beacon-of-beacons/issues/new">create a new bug report</a>.</p>
 
