--- a/download.html
+++ b/download.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -38,7 +38,7 @@
                 <h2>
                     <a id="see-bob-in-action" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
-                <p>At this moment, we don't have an official release of Beacon Network. However, feel free to download the sources and <a href="running.html">build it yourself</a>:</p>
+                <p>Source code:</p>
                 <ul>
                     <li><a href="https://github.com/mcupak/beacon-of-beacons/zipball/master">ZIP</a></li>
                     <li><a href="https://github.com/mcupak/beacon-of-beacons/tarball/master">TAR.GZ</a></li>
