--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -36,11 +36,13 @@
             <!-- MAIN CONTENT -->
             <section id="main_content" class="inner">
                 <h2>
-                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Beacon Network?</h2>
+                    <a id="what-is-bob" class="anchor" href="#what-is-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Beacon of Beacons?</h2>
 
-                <p>Beacon Network (formerly known as Beacon of Beacons, or BoB, for short) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. Beacon Network standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
-                
+                <p>Beacon of Beacons (or BoB, for short) provides a unified REST API to publicly available <a href="http://ga4gh.org/#/beacon">GA4GH Beacons</a>. Beacon of Beacons standardizes the way beacons are accessed and aggregates their results, thus addressing one of the missing parts of the Beacon project itself.</p>
+
                 <p>If you want to know more about the beacon project, visit the <a href="http://ga4gh.org/#/beacon">project website</a>, or watch <a href="http://youtu.be/sNQzAmfi7xI">this YouTube video</a>.</p>
+
+                <p>Beacon of Beacons has evolved into the Beacon Network available <a href="https://beacon-network.org">as a service</a>. Please use [the discussion forum](https://groups.google.com/forum/#!forum/ga4gh-beacon-network) for issues and technical questions related to the Beacon Network.</p>
             </section>
         </div>
 
