--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,11 @@
 <ul>
     <li><a href='index.html'><span>What is it?</span></a></li>
-    <li><a href='visit.html'><span>See it in action</span></a></li>
     <li><a href='download.html'><span>Download</span></a></li>
     <li><a href='running.html'><span>Build and run it</span></a></li>
     <li><a href='api.html'><span>API</span></a></li>
     <li><a href='queries.html'><span>Query examples</span></a></li>
     <li><a href='beacons.html'><span>Build beacons</span></a></li>
     <li><a href='contribute.html'><span>Contribute</span></a></li>
-    <li><a href='terms.html'><span>License & Terms of use</span></a></li>
+    <li><a href='terms.html'><span>License</span></a></li>
     <li class='last'><a href='contact.html'><span>Contact us</span></a></li>
 </ul>
