--- a/queries.html
+++ b/queries.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -82,7 +82,7 @@
     {
         "aggregator": true,
         "id": "bob",
-        "name": "Beacon Network",
+        "name": "Beacon of Beacons",
         "organization": "Global Alliance for Genomics and Health"
     },
     {
@@ -458,7 +458,7 @@
         "beacon": {
             "aggregator": true,
             "id": "bob",
-            "name": "Beacon Network",
+            "name": "Beacon of Beacons",
             "organization": "Global Alliance for Genomics and Health"
         },
         "query": {
@@ -710,7 +710,7 @@
 </code></pre>
 
                 <h3><a id="query-bob" class="anchor" href="#query-bob" aria-hidden="true"><span class="octicon octicon-link"></span></a>Aggregate responses of all beacons via beacon of beacons</h3>
-                <p>If you want to utilize the "beacon of beacons" feature and are only interested in whether any of the existing beacons have a particular variant, treat Beacon Network as a beacon itself and let it perform the aggregation. Query:</p>
+                <p>If you want to utilize the "beacon of beacons" feature and are only interested in whether any of the existing beacons have a particular variant, treat Beacon of Beacons as a beacon itself and let it perform the aggregation. Query:</p>
 
                 <pre><code>GET http://localhost:8080/beacon-of-beacons/rest/responses/bob?chrom=14&amp;pos=106833421&amp;allele=D
 </code></pre>
@@ -721,7 +721,7 @@
     "beacon": {
         "aggregator": true,
         "id": "bob",
-        "name": "Beacon Network",
+        "name": "Beacon of Beacons",
         "organization": "Global Alliance for Genomics and Health"
     },
     "query": {
