--- a/running.html
+++ b/running.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -38,7 +38,7 @@
                 <h2>
                     <a id="how-to-run-it" class="anchor" href="#how-to-run-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run it</h2>
 
-                <p>Instructions maintained in <a href="https://github.com/mcupak/beacon-of-beacons">README.md</a> on GitHub.</p>
+                <p>Instructions are maintained in <a href="https://github.com/mcupak/beacon-of-beacons">README.md</a> on GitHub. Beacon of Beacons can also be built and run using <a href="https://www.docker.com">Docker</a> and <a href="https://docs.docker.com/compose/">Docker Compose</a>, see <a href="https://github.com/mcupak/beacon-of-beacons/tree/master/docker">the repository</a>.</p>
             </section>
         </div>
 
