--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -39,10 +39,6 @@
                     <a id="license" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
                 <p>The code in <a href="https://github.com/mcupak/beacon-of-beacons">this repository</a> is licensed under the <a href="http://opensource.org/licenses/MIT">MIT license</a>.</p>
-                <h2>
-                    <a id="terms-of-use" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Terms of use</h2>
-
-                <p>An instance of the Beacon Network is a subject to <a href="http://beacon-network.org/#/terms">these Terms of use</a>.</p>
             </section>
         </div>
 
