--- a/contribute.html
+++ b/contribute.html
@@ -19,7 +19,7 @@
             });
         </script>
 
-        <title>Beacon Network</title>
+        <title>Beacon of Beacons</title>
     </head>
 
     <body>
@@ -38,20 +38,18 @@
                 <h2>
                     <a id="see-bob-in-action" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
 
-                <p>Beacon Network is an open-source project and we welcome any contribution. If you want to help us, <a href="mailto:beacon@dnastack.com?subject=[Beacon Network] Contribution&body=Hi, I want to contribute to the Beacon Network:">send us an email</a>. How can you help?</p>
+                <p>Beacon of Beacons is an open-source project and we welcome any contribution. If you want to help us, <a href="mailto:beacon@dnastack.com?subject=[Beacon of Beacons] Contribution&body=Hi, I want to contribute to the Beacon of Beacons:">send us an email</a>. How can you help?</p>
                 <ul>
                     <li>Choose one of our <a href="https://github.com/mcupak/beacon-of-beacons/issues?q=is%3Aissue+is%3Aopen+">open issues</a>, comment on it (so that we know you want to help), solve it and <a href="https://help.github.com/articles/using-pull-requests/">send us a pull request</a>.</li>
                     <li><a href="https://github.com/mcupak/beacon-of-beacons/issues/new">Propose a new issue</a>, assign it to yourself, implement a solution and <a href="https://help.github.com/articles/using-pull-requests/">send us a pull request</a>.</li>
-                    <li><a href="mailto:beacon@dnastack.com?subject=[Beacon Network] Contribution&body=Hi, I want to contribute to the Beacon Network:">Let us know</a> about your idea.</li>
+                    <li><a href="mailto:beacon@dnastack.com?subject=[Beacon of Beacons] Contribution&body=Hi, I want to contribute to the Beacon of Beacons:">Let us know</a> about your idea.</li>
                 </ul>
                 
                 <p>Need ideas regarding what we need help with? Here are a few:</p>
                 <ul>
                     <li>Find a beacon we don't have in our database and implement a service querying it.</li>
                     <li>Create a <a href="beacons.html">beacon adapter</a> for a programming language we don't support yet.</li>
-                    <li>Our Python and Node.js adapters don't quite reach the quality of our Java adapter. Improve them.</li>
                 </ul>
-
             </section>
         </div>
 
