updated link to JS BDK

--- a/beacons.html
+++ b/beacons.html
@@ -41,7 +41,7 @@
                 <p>Building beacons on top of your data is simple. To help you get started, we created a set of beacon development kits (BDKs), or adapters if you will, for popular languages. For more information, go to:</p>
                 <ul>
                     <li><a href="https://github.com/mcupak/beacon-java">Java BDK</a></li>
-                    <li><a href="https://github.com/mcupak/beacon-nodejs">Node.js BDK</a></li>
+                    <li><a href="https://github.com/mcupak/beacon-javascript">JavaScript BDK</a></li>
                     <li><a href="https://github.com/mcupak/beacon-python">Python BDK</a></li>
                 </ul>
             </section>
